# ps-machacas

./: .gitignore  README.md  TEST_PLAN.md  package-lock.json  requirements.txt
.github/workflows/: coverage.yml  mypy.yml  tests.yml
backend/: .env.development  README.md  requirements.txt  run_server.py
backend/cash/: models.py  serializers.py  views.py
backend/categories/: apps.py  models.py  serializers.py  urls.py  views.py
backend/clients/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/external_services/: urls.py  views.py
backend/opticalCenter/: apps.py  models.py  serializers.py  urls.py  views.py
backend/products/: admin.py  filters.py  models.py  seed_products.py  serializers.py  views.py
backend/registrame/: asgi.py  settings.py  urls.py
backend/sales/: filters.py  models.py  printer.py  serializers.py  urls.py  views.py
backend/sequences/: admin.py  apps.py  models.py
backend/suppliers/: models.py  serializers.py  (+1 more)
docs/: index.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  build_installer.bat  tauri.conf.json  verificar_estructura.bat
frontend/src-tauri/binaries/postgres/share/locale/de/LC_MESSAGES/: postgres-17.mo
frontend/src-tauri/binaries/postgres/share/locale/fr/LC_MESSAGES/: libpq5-17.mo  psql-17.mo
frontend/src-tauri/binaries/postgres/share/locale/ja/LC_MESSAGES/: postgres-17.mo
frontend/src-tauri/binaries/postgres/share/locale/ru/LC_MESSAGES/: pg_rewind-17.mo  postgres-17.mo
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+133 files in other folders)
